# rocket-web-formular-example

./: .gitignore  Cargo.toml  LICENSE.MD  README.md
.github/workflows/: rust.yaml
deployment/: website-formular-nginx.conf  website-formular.service
locales/de/: main.ftl
locales/en/: main.ftl
npm/: package.json
src/: captchas.rs  lang.rs  main.rs  save.rs  simple_captcha.rs
templates/: base.html.tera  home.html.tera
